# zh-tram-data

./: .gitignore  BACKLOG.md  CLAUDE.md  CNAME  Makefile  PROCESS_LOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: pages.yml
notebooks/: 00_introduction.ipynb  01_exploration.ipynb  01_tooling-evaluation.ipynb  02_ingestion-ist.ipynb  02_preparation.ipynb  03_analysis.ipynb  03_ingestion-gtfs.ipynb  04_ingestion-meteo.ipynb  04_insights.ipynb  05_ingestion-events.ipynb  06_geo-reference.ipynb  07_master-preparation.ipynb  08_master-validation.ipynb
notebooks/appendix/: vbz-geo-map-geopandas.ipynb  vbz-geo-map-kepler.ipynb  vbz-geo-map-plotly.ipynb  vbz-geo-map.ipynb
public/: index.html  overview.html  storyview.html  techview.html
public/css/: slides.css
public/json/: storyline-overview.json  storyline-storyview.json  storyline-techview.json
public/md/: overview.md  portfolio.md  slides-matrix.md  slides.yaml  storyview.md  techview.md
src/zh_tram_data/: __init__.py  config.py  doc_loader.py  notebook.py  process_ist_daten.py  settings.py  utils.py
tests/: test_data.py  test_features.py
