# pyproject.toml
# --------------
# Zentrale Projektkonfiguration: Metadaten, Dependencies, Build-System, Tool-Settings.
# uv liest diese Datei direkt – keine requirements.txt oder environment.yml nötig.
#
# Setup (einmalig, nach dem Klonen / Erstellen):
#   uv venv                          → erstellt .venv/
#   .venv\Scripts\activate           → Umgebung aktivieren (Windows)
#   source .venv/bin/activate        → Umgebung aktivieren (Mac/Linux)
#   uv pip install -e ".[dan]"  → installiert alle Dependencies + dieses Paket
#
# Neue Pakete hinzufügen:
#   Eintrag in dependencies[] unten ergänzen, dann:
#   uv pip install -e ".[dan]"  → erneut ausführen

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "zh_tram_data"
version     = "0.1.0"
description = "Zurich Tram Data – DE Project"
requires-python = ">=3.10"

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "scikit-learn>=1.3",
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "pyyaml>=6.0",
  "joblib>=1.3",
  "python-dotenv>=1.0",
  "rich>=13.0",
  "pyarrow>=14.0",
  "polars>=0.20",
  "geopandas>=0.14",
  "shapely>=2.0",
  "psutil>=5.9",
  "requests>=2.31",
  "wgnd @ git+https://github.com/kaywiegand/wgnd-toolkit.git@main",
]

[project.optional-dependencies]
dsc = [
  "xgboost>=2.0",
  "shap>=0.43",
  "optuna>=3.0",
]
dan = [
  "plotly>=5.0",
  "folium>=0.15",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length    = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select      = ["E", "F", "I"]
